--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "devil",
   "version": "2.0.0",
-  "description": "",
+  "description": "System Server",
   "main": "server.js",
   "engines": {
     "node": "16.13.2"
@@ -9,16 +9,13 @@
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "l",
-  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
-    "express": "latest",
+    "express": "^4.18.2",
     "multer": "^1.4.4",
-    "node-telegram-bot-api": "latest",
+    "node-telegram-bot-api": "^0.61.0",
     "uuid": "^8.3.2",
-    "ws": "latest",
+    "ws": "^8.13.0",
     "axios": "^0.26.1"
   }
 }
