--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "devil",
+  "name": "hashashe-server",
   "version": "2.0.0",
-  "description": "System Server",
+  "description": "Kurdish Hacking Server",
   "main": "server.js",
-  "engines": {
-    "node": "16.13.2"
-  },
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.1",
     "express": "^4.18.2",
-    "multer": "^1.4.4",
+    "ws": "^8.13.0",
     "node-telegram-bot-api": "^0.61.0",
     "uuid": "^8.3.2",
-    "ws": "^8.13.0",
+    "multer": "^1.4.4",
+    "body-parser": "^1.19.1",
     "axios": "^0.26.1"
   }
 }
