--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "hashashe-server",
-  "version": "2.0.0",
-  "description": "Kurdish Hacking Server",
+  "name": "7ashashe",
+  "version": "1.0.0",
+  "description": "Kurdish Server",
   "main": "server.js",
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "start": "node server.js"
   },
